src/components/home/Home.css
.main-container {
    padding: 2rem;
    background-color: skyblue;
    height: 800px;
}

.title-container {
    background-image: url('./../../gif/cloud-moving.gif');
    background-color: skyblue;
    border-radius: 50px;
    box-shadow: 5px 5px;
}

.title {
    color: black;
    font-size: 100px;
    font-family: 'Indie Flower';
    border: 1px solid black;
    border-radius: 50px;
    box-shadow: 5px 10px;
    width: 70%;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    position: relative;
    margin: auto;
    background-color: white;
}

.input-container {
    background-color: white;
    margin: 1rem;
    border-radius: 50px;
}

.error-msg {
    color: red;
}

.same-line {
    display: inline-block;
    margin-right: 5px;
}

.italicized {
    font-style: italic;
}

.bold {
    font-weight: bold;
}

.quiz-content {
    float: left;
    padding: 1rem;
}

.quiz-container {
    background-color: white;
    margin: 1rem;
    border-radius: 50px;
    padding: 1rem;
    text-align: center;
}

.quiz-card {
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    position: relative;
    margin: auto;
    padding: 1rem;
    border: 5px solid skyblue;
    border-radius: 50px;
    display: inline-block;;
}

.quiz-header {
    float: left;
    display: block;
    clear:both;
    text-align: left;
    padding: 1rem;
}

.quiz-question {
    display: inline-block;
    max-width: 400px;
    width: 100%;
    height: auto;
    margin-bottom: 1rem;
}

